minio/tenant-console-ingress.yaml
# apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1beta1
# apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-tenant-1-console
  namespace: minio-tenant
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
        - minio-tenant-1.example.com
      secretName: minio-console-tls
  rules:
    - host: minio-tenant-1.example.com
      http:
        paths:
          - backend:
              serviceName: minio-console
              servicePort: 9443
